--- a/lesson-15/css/furniture.css
+++ b/lesson-15/css/furniture.css
@@ -1,9 +1,15 @@
+@import url('../img/furniture/furniture-icons.svg');
+
 .body--f-color-font {
    font-family: 'Nunito Sans';
    color: #1b1a1a;
 }
 
 .page--f-mb {
+   margin-bottom: 100px;
+}
+
+.page-f > *:not(:last-child) {
    margin-bottom: 100px;
 }
 
@@ -21,6 +27,7 @@ img {
    width: 100%;
    height: 100%;
    object-fit: cover;
+   object-position: center;
 }
 
 [class*='__icon'] {
@@ -30,6 +37,48 @@ img {
 
 [class*='__container--width'] {
    max-width: 1140px;
+}
+
+.title-group__title {
+   display: flex;
+   align-items: center;
+   column-gap: 10px;
+   font-size: 16px;
+   text-transform: uppercase;
+   color: #9a6437;
+}
+
+.title-group__title--reviews-section {
+   justify-content: center;
+   color: #e0e0e0;
+}
+
+.title-group__title::before {
+   content: '';
+   width: 55px;
+   height: 1px;
+   background-color: #9a6437;
+}
+
+.title-group__title--reviews-section::before {
+   background-color: #e0e0e0;
+}
+
+.title-group__title--reviews-section::after {
+   content: '';
+   width: 55px;
+   height: 1px;
+   background-color: #e0e0e0;
+}
+
+.title-group__text {
+   font-size: 42px;
+   text-transform: capitalize;
+}
+
+.title-group__text--center {
+   text-align: center;
+   color: #fff;
 }
 
 .link-template {
@@ -273,29 +322,8 @@ img {
    column-gap: 30px;
 }
 
-.title-group {
+.popular-products__title-group {
    flex: 0 0 auto;
-}
-
-.title-group__title {
-   display: flex;
-   align-items: center;
-   column-gap: 10px;
-   font-size: 16px;
-   text-transform: uppercase;
-   color: #9a6437;
-}
-
-.title-group__title::before {
-   content: '';
-   width: 55px;
-   height: 1px;
-   background-color: #9a6437;
-}
-
-.title-group__text {
-   font-size: 42px;
-   text-transform: capitalize;
 }
 
 .popular-products__more-link {
@@ -318,14 +346,11 @@ img {
 .item-product__link-img {
    height: 243px;
    width: 100%;
-   padding: 40px 60px;
+   padding: 40px 40px;
    background-color: #f7f7f7;
 }
 
 .item-product__link-img > img {
-   flex: 0 0 100%;
-   object-fit: contain;
-   object-position: center;
    transition: transform 0.3s linear;
 }
 
@@ -333,7 +358,7 @@ img {
    transform: scale(1.1);
 }
 
-.item-product__options {
+.options {
    display: flex;
    align-items: center;
    justify-content: center;
@@ -343,10 +368,7 @@ img {
    height: 33px;
    background-color: #1c1b1b;
 }
-.options {
-}
-.options__item {
-}
+
 .options__link {
    display: flex;
    align-items: center;
@@ -365,9 +387,6 @@ img {
 
 .item-product__text-content > *:not(:last-child) {
    margin-bottom: 10px;
-}
-
-.item-product__title {
 }
 
 .item-product__link-title {
@@ -426,4 +445,124 @@ img {
 .rating__icon {
    width: 13px;
    height: 12px;
+}
+
+/* ========================================= */
+.reviews {
+   position: relative;
+   background: linear-gradient(90deg, rgba(14, 14, 14, 0.3) 0%, rgba(14, 14, 14, 0.3) 100%),
+      url('../img/furniture/reviews-bg.webp') center/ cover no-repeat;
+   padding-top: 70px;
+   padding-bottom: 70px;
+}
+
+.reviews__container > *:not(:last-child) {
+   margin-bottom: 50px;
+}
+
+.reviews__list {
+   display: flex;
+   align-items: flex-start;
+   flex-wrap: wrap;
+   margin-left: -15px;
+   margin-right: -15px;
+}
+
+.reviews__column {
+   flex: 0 0 25%;
+   height: 100%;
+   padding-left: 15px;
+   padding-right: 15px;
+}
+
+.reviews__item {
+   transform: translateY(0);
+   transition: transform 0.3s linear;
+}
+
+.reviews__item:hover {
+   transform: translateY(-15px);
+}
+
+.reviews__avatar {
+   position: relative;
+   width: 110px;
+   height: 110px;
+   text-align: center;
+   margin-left: auto;
+   margin-right: auto;
+   border-radius: 50%;
+   overflow: hidden;
+   border: 1px solid rgba(14, 14, 14, 0.1);
+   background-color: #fff;
+}
+
+.reviews__avatar::after {
+   content: '';
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   background-color: rgba(14, 14, 14, 0.1);
+}
+
+.reviews__main-content {
+   color: #999999;
+   line-height: 1.2;
+   text-align: center;
+   padding: 100px 20px 30px;
+   margin-top: -70px;
+   background-color: rgb(255, 255, 255);
+}
+
+.reviews__main-content > *:not(:last-child) {
+   margin-bottom: 10px;
+}
+
+.reviews__name {
+   text-transform: capitalize;
+   color: #1b1a1a;
+}
+
+.reviews__work {
+   text-transform: capitalize;
+}
+
+.reviews__rating {
+   position: relative;
+   display: flex;
+   align-items: center;
+   justify-content: center;
+   column-gap: 5px;
+   padding-bottom: 5px;
+}
+
+.reviews__rating:after {
+   content: ' ';
+   position: absolute;
+   top: 100%;
+   left: 0;
+   width: 100%;
+   height: 1px;
+   background-color: #e0e0e0;
+}
+
+.reviews__icon {
+   flex: 0 0 auto;
+   width: 15px;
+   height: 15px;
+}
+
+.reviews__num {
+   flex: 0 0 auto;
+   max-width: 55px;
+   color: #1b1a1a;
+   font-size: 14px;
+   overflow: hidden;
+}
+
+.reviews__text {
+   flex: 0 0 auto;
+   font-weight: 300;
 }
