--- a/lesson-15/css/style.css
+++ b/lesson-15/css/style.css
@@ -1,5 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Ephesis:regular&display=swap');
-@import url('https://fonts.googleapis.com/css?family=Nunito+Sans:regular,500,600,700&display=swap');
+@import url('https://fonts.googleapis.com/css?family=Nunito+Sans:300,regular,500,600,700&display=swap');
 @import url('https://fonts.googleapis.com/css?family=Oswald:regular&display=swap');
 @import url('fonts.css');
 @import url('reset.css');
