--- a/lesson-15/css/furniture.css
+++ b/lesson-15/css/furniture.css
@@ -35,8 +35,16 @@ img {
    transition: fill 0.3s linear;
 }
 
-[class*='__container--width'] {
+.f-header__container,
+.footer__container,
+.popular-products__container,
+.service__container,
+.reviews__container {
    max-width: 1140px;
+}
+
+.blog__container {
+   max-width: 1240px;
 }
 
 .title-group__title {
@@ -48,26 +56,28 @@ img {
    color: #9a6437;
 }
 
-.title-group__title--reviews-section {
-   justify-content: center;
-   color: #e0e0e0;
-}
-
-.title-group__title::before {
+.title-group__title::before,
+.title-group__title::after {
    content: '';
    width: 55px;
    height: 1px;
    background-color: #9a6437;
 }
 
-.title-group__title--reviews-section::before {
-   background-color: #e0e0e0;
+.title-group__title--not-after::after {
+   display: none;
 }
 
-.title-group__title--reviews-section::after {
-   content: '';
-   width: 55px;
-   height: 1px;
+.title-group__title--jcc {
+   justify-content: center;
+}
+
+.title-group__title--color-pseudo-el-bg {
+   color: #e0e0e0;
+}
+
+.title-group__title--color-pseudo-el-bg::before,
+.title-group__title--color-pseudo-el-bg::after {
    background-color: #e0e0e0;
 }
 
@@ -76,9 +86,14 @@ img {
    text-transform: capitalize;
 }
 
-.title-group__text--center {
+.title-group__text--center-color {
    text-align: center;
    color: #fff;
+}
+
+.title-group__text--center-color-dark {
+   text-align: center;
+   color: #1b1a1a;
 }
 
 .link-template {
@@ -464,8 +479,13 @@ img {
    display: flex;
    align-items: flex-start;
    flex-wrap: wrap;
+   row-gap: 30px;
    margin-left: -15px;
    margin-right: -15px;
+}
+
+.reviews__list:hover {
+   cursor: url('../img/furniture/star.svg'), auto;
 }
 
 .reviews__column {
@@ -532,7 +552,6 @@ img {
 .reviews__rating {
    position: relative;
    display: flex;
-   align-items: center;
    justify-content: center;
    column-gap: 5px;
    padding-bottom: 5px;
@@ -565,4 +584,100 @@ img {
 .reviews__text {
    flex: 0 0 auto;
    font-weight: 300;
+}
+
+/* ========================================== */
+
+.service__list {
+   background-color: #1c1b1b;
+   padding: 50px 65px;
+   display: flex;
+   align-items: center;
+   justify-content: space-between;
+   column-gap: 10px;
+   row-gap: 10px;
+}
+.service__item {
+   flex: 1 1 25%;
+   display: flex;
+   align-items: flex-start;
+   column-gap: 10px;
+   min-height: 60px;
+}
+
+.service__item:not(:first-child) {
+   padding-left: 30px;
+   border-left: 1px solid #a6a6a6;
+}
+
+.service__icon {
+   width: 48px;
+   height: 48px;
+}
+
+.service__text-content {
+   flex: 1 1 auto;
+   align-self: flex-start;
+   color: #fff;
+   font-size: 14px;
+   line-height: 1.2;
+   text-transform: capitalize;
+}
+
+.service__text-content > *:not(:last-child) {
+   margin-bottom: 5px;
+}
+.service__title {
+   font-size: 20px;
+}
+
+/* ================================ */
+
+.blog__container > *:not(:last-child) {
+   margin-bottom: 45px;
+}
+
+.blog__slider {
+   display: flex;
+   align-items: center;
+   flex-wrap: nowrap;
+   column-gap: 25px;
+}
+
+.slider__btn {
+   display: flex;
+   align-items: center;
+   padding: 5px;
+   width: 25px;
+   stroke: #1b1a1a;
+   border: 1px solid rgba(95, 142, 62, 0);
+   transition: all 0.3s linear;
+}
+
+.slider__btn:hover {
+   stroke: #608e3e;
+   border: 1px solid #608e3e;
+}
+
+.slider__btn:focus {
+   stroke: #608e3e;
+}
+
+.slider__list {
+   flex: 0 1 auto;
+   display: flex;
+   align-self: center;
+   margin-left: -15px;
+   margin-right: -15px;
+}
+
+.slider__column {
+   flex: 0 1 auto;
+   padding-left: 15px;
+   padding-right: 15px;
+}
+
+.slider__img {
+   max-width: 100%;
+   overflow: hidden;
 }
