--- a/lesson-16/css/style.css
+++ b/lesson-16/css/style.css
@@ -548,6 +548,16 @@ input[type='number']::-webkit-outer-spin-button {
 
 .models-label--checkbox::before {
    content: '';
+   /* 
+      width:
+      та flex: 0 0 20px;
+      обовязково в дуеті,
+      якщо display: inline-flex;
+      у батьківського елемента
+      та є  before або after
+      тому що текст порушується, 
+      а псевдоелемент сплющується
+   */
    width: 20px;
    flex: 0 0 20px;
    height: 20px;
@@ -993,6 +1003,8 @@ input[type='number']::-webkit-outer-spin-button {
 .call-back__container .call-back__input,
 .call-back__container .call-back__textarea {
    background-color: #f8f8f8;
+   /* примусове обнулення  border-radius
+   за потреби, для айфона */
    border-radius: 0 !important;
    border: 1px solid #dddddd;
 }
