--- a/lesson-16/css/style.css
+++ b/lesson-16/css/style.css
@@ -109,7 +109,7 @@ input[type='number']::-webkit-outer-spin-button {
    padding: 20px 0;
    font-size: 24px;
    font-weight: 500;
-   transition: all 300ms;
+   transition: all 0.3s;
 }
 
 .nav__link::after {
@@ -123,7 +123,7 @@ input[type='number']::-webkit-outer-spin-button {
    transform: scale(0);
    border-radius: 1px;
 
-   transition: all 300ms;
+   transition: all 0.3s;
 }
 
 .nav__link--line-bg::after {
@@ -200,12 +200,12 @@ input[type='number']::-webkit-outer-spin-button {
    width: 100%;
    border-radius: 4px;
    border: 1px solid rgba(242, 242, 242, 0.6);
-   transition: all 300ms;
+   transition: all 0.3s;
 }
 
 .form-practice__input::placeholder {
    color: rgba(242, 242, 242, 0.4);
-   transition: all 300ms;
+   transition: all 0.3s;
 }
 
 .form-practice__input:hover {
@@ -297,7 +297,7 @@ input[type='number']::-webkit-outer-spin-button {
    border-radius: 4px;
    border: 1px solid rgba(242, 242, 242, 1);
 
-   transition: all 300ms;
+   transition: all 0.3s;
 }
 
 .form-practice__button:hover {
@@ -446,7 +446,7 @@ input[type='number']::-webkit-outer-spin-button {
 .my-info__line:hover > .models-label,
 .check-out__line:hover > .models-label {
    color: #8a33fd;
-   transition: all 300ms linear;
+   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .models-input,
@@ -460,7 +460,7 @@ input[type='number']::-webkit-outer-spin-button {
    border-radius: 8px;
    border: 1px solid #f6f6f6;
 
-   transition: all 300ms linear;
+   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .models-input--border {
@@ -480,7 +480,7 @@ input[type='number']::-webkit-outer-spin-button {
    font-size: 16px;
    text-transform: capitalize;
    color: #807d7e;
-   transition: opacity 300ms linear;
+   transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .models-input--ttransform::placeholder {
@@ -541,7 +541,7 @@ input[type='number']::-webkit-outer-spin-button {
    align-items: center;
    font-size: 20px;
    line-height: 1.3;
-   transition: all 300ms linear;
+   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .models-label--checkbox::before {
@@ -562,7 +562,7 @@ input[type='number']::-webkit-outer-spin-button {
    border-radius: 2px;
    border: 2px solid #bebcbd;
 
-   transition: all 300ms linear;
+   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .models-label--checkbox:hover::before {
@@ -596,7 +596,7 @@ input[type='number']::-webkit-outer-spin-button {
    padding: 12px 40px;
    font-size: 20px;
    border-radius: 8px;
-   transition: all 300ms linear;
+   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 .my-info__btn--save {
    font-weight: 600;
@@ -697,7 +697,7 @@ input[type='number']::-webkit-outer-spin-button {
    border: 1px solid #8a33fd;
    color: #ffffff;
    background-color: #8a33fd;
-   transition: all 300ms linear;
+   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .check-out__button:hover {
@@ -778,7 +778,7 @@ input[type='number']::-webkit-outer-spin-button {
    align-items: center;
    font-size: 20px;
    line-height: 1.2;
-   transition: all 300ms linear;
+   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .models-label--radio::before,
@@ -790,7 +790,7 @@ input[type='number']::-webkit-outer-spin-button {
    height: 18px;
    border-radius: 50%;
 
-   transition: all 300ms linear;
+   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .models-radio:focus-visible + .models-label--radio,
@@ -906,7 +906,7 @@ input[type='number']::-webkit-outer-spin-button {
    transform: translateY(-50%);
    width: 20px;
    height: 20px;
-   transition: all 300ms linear;
+   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .check-out__security-button:hover {
@@ -981,7 +981,7 @@ input[type='number']::-webkit-outer-spin-button {
    left: 40px;
    transform: translateY(-50%);
 
-   transition: all 300ms linear;
+   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .call-back__input:focus + .call-back__label {
@@ -1020,7 +1020,7 @@ input[type='number']::-webkit-outer-spin-button {
 .call-back__textarea::placeholder {
    color: #37393f;
    opacity: 1;
-   transition: all 300ms linear;
+   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .call-back__textarea:focus::placeholder {
@@ -1049,7 +1049,7 @@ input[type='number']::-webkit-outer-spin-button {
    width: max-content;
    margin: 0 auto;
 
-   transition: all 300ms linear;
+   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .call-back__button:hover {
@@ -1066,7 +1066,6 @@ input[type='number']::-webkit-outer-spin-button {
 .add-recipe__container {
    font-family: 'Poppins';
    max-width: 830px;
-   margin-bottom: 30px;
 }
 
 .add-recipe__container > * {
@@ -1074,6 +1073,8 @@ input[type='number']::-webkit-outer-spin-button {
 }
 
 .add-recipe__title {
+   min-width: 320px;
+   width: 100%;
    font-weight: 600;
    font-size: 44px;
    color: #001833;
@@ -1087,12 +1088,20 @@ input[type='number']::-webkit-outer-spin-button {
    height: 20px;
    stroke: #8baa36;
    transform: rotateX(0deg);
-   transition: transform 300ms;
-   transition: all 0.3s linear;
+   transition: transform 0.3s;
+   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .form-add-recipe > * {
    margin-bottom: 100px;
+}
+
+.title-form {
+   width: 100%;
+   font-size: 24px;
+   line-height: 1.1;
+   text-transform: capitalize;
+   color: #3e4462;
 }
 
 .form-add-recipe__top-part {
@@ -1103,8 +1112,8 @@ input[type='number']::-webkit-outer-spin-button {
 
 .photo-block {
    flex: 0 0 auto;
+   height: 355px;
    width: 350px;
-   height: 352px;
    border-radius: 5px;
    background-color: #8baa36;
    display: flex;
@@ -1133,7 +1142,7 @@ input[type='number']::-webkit-outer-spin-button {
    height: 64px;
    border-radius: 10px;
    border: 1px solid transparent;
-   transition: border 0.3s linear;
+   transition: border 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .photo-block__input:focus + .photo-block__label,
@@ -1148,11 +1157,11 @@ input[type='number']::-webkit-outer-spin-button {
 }
 
 .data-base-recipe {
-   height: 100%;
+   flex: 1 1 auto;
    display: flex;
    justify-content: space-between;
    flex-direction: column;
-   row-gap: 50px;
+   row-gap: 55px;
 }
 
 .data-base-recipe__wrapper {
@@ -1165,7 +1174,7 @@ input[type='number']::-webkit-outer-spin-button {
 }
 
 .data-base-recipe__wrapper:hover > .data-base-recipe__input {
-   border-bottom: 1px solid 001833;
+   border-bottom: 1px solid #001833;
 }
 
 .data-base-recipe__wrapper:hover > .data-base-recipe__label {
@@ -1181,7 +1190,7 @@ input[type='number']::-webkit-outer-spin-button {
    border-radius: 0 !important;
    border-bottom: 1px solid transparent;
    outline: 1px solid transparent;
-   transition: border 0.3s linear;
+   transition: border 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .data-base-recipe__label {
@@ -1189,7 +1198,7 @@ input[type='number']::-webkit-outer-spin-button {
    color: #7d7d7d;
    font-size: 16px;
    line-height: 1.5;
-   transition: color 0.3s linear;
+   transition: color 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .data-base-recipe__input--color:hover,
@@ -1212,14 +1221,12 @@ input[type='number']::-webkit-outer-spin-button {
    max-width: max-content;
    flex: 0 1 50%;
    font-size: 16px;
+   border-radius: 4px;
    padding: 5px 30px 5px 5px;
 }
 
 .data-base-recipe__option--category {
    width: 100px;
-}
-
-.data-base-recipe__icon {
 }
 
 .data-base-recipe__select--category:focus > .data-base-recipe__option--category:checked {
@@ -1229,7 +1236,6 @@ input[type='number']::-webkit-outer-spin-button {
 
 .data-base-recipe__select--category:focus,
 .data-base-recipe__select--category:hover {
-   border-radius: 4px;
    outline: 1px solid #8baa36;
 }
 
@@ -1239,32 +1245,46 @@ input[type='number']::-webkit-outer-spin-button {
 
 .data-base-recipe__wrapper-input-label--time {
    display: flex;
-   align-items: center;
+   align-items: baseline;
    justify-content: flex-end;
    column-gap: 10px;
    border-bottom: 1px solid #e0e0e0;
    padding-bottom: 20px;
 }
+
 .data-base-recipe__label--time-num {
-   flex: 1 1 auto;
+   flex: 0 1 50%;
 }
+
 .data-base-recipe__input--time-num {
+   flex: 0 1 40%;
    text-align: end;
 }
 
+.data-base-recipe__input--time-num::placeholder {
+   opacity: 1;
+   transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.data-base-recipe__input--time-num:focus::placeholder {
+   opacity: 0;
+}
+
 .data-base-recipe__time-measurement {
-   flex: 0 1 auto;
+   flex: 0 1 10%;
    font-size: 16px;
 }
 
-.form-add-recipe__down-part {
+.data-base-recipe__wrapper-input-label--time > * {
+   transition: color 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.data-base-recipe__wrapper-input-label--time:hover > * {
+   color: #001833;
 }
 
 .down-part-form > * {
-   margin-bottom: 35px;
-}
-
-.down-part-form__ingredients {
+   margin-bottom: 100px;
 }
 
 .ingredients {
@@ -1272,20 +1292,14 @@ input[type='number']::-webkit-outer-spin-button {
 }
 
 .ingredients > * {
-   margin-bottom: 100px;
+   margin-bottom: 30px;
 }
 
-.ingredient__title-block {
+.ingredients__title-block {
    display: flex;
    align-items: baseline;
    justify-content: space-between;
    column-gap: 30px;
-}
-
-.ingredients__title {
-   font-size: 24px;
-   line-height: 1.1;
-   color: #3e4462;
 }
 
 .counter-ingredients {
@@ -1325,13 +1339,6 @@ input[type='number']::-webkit-outer-spin-button {
 
 .counter-ingredients__btn:focus {
    outline: 1px solid #8baa36;
-}
-
-.counter-ingredients__btn--subtract {
-}
-.counter-ingredients__number {
-}
-.counter-ingredients__btn--add {
 }
 
 .ingredients__list {
@@ -1392,16 +1399,17 @@ input[type='number']::-webkit-outer-spin-button {
 
 .ingredients__icon {
    top: 20px;
-   right: 10px;
+   right: 20px;
 }
 
 .ingredients .ingredients__name,
 .ingredients .ingredients__volume,
 .ingredients .ingredients__units-mass {
    font-size: 18px;
+   border-radius: 3px;
    border: 1px solid transparent;
    outline: 1px solid transparent;
-   transition: all 0.3s linear;
+   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .ingredients__name:hover,
@@ -1418,7 +1426,7 @@ input[type='number']::-webkit-outer-spin-button {
 }
 
 .ingredients__units-mass {
-   flex: 0 0 50px;
+   flex: 0 0 60px;
    background-color: rgba(244, 244, 244);
 }
 
@@ -1427,9 +1435,9 @@ input[type='number']::-webkit-outer-spin-button {
 }
 
 .btn-remove {
-   padding: 5px;
-   height: 30px;
-   width: 30px;
+   height: 20px;
+   width: 20px;
+   border-radius: 3px;
 }
 
 .btn-remove__icon {
@@ -1444,7 +1452,71 @@ input[type='number']::-webkit-outer-spin-button {
 
 .btn-remove:focus > .btn-remove__icon {
    stroke: #8baa36;
+}
+
+.btn-remove:focus {
+   stroke: #8baa36;
    outline: 1px solid #8baa36;
+}
+
+.cooking {
+   max-width: 500px;
+}
+
+.cooking > * {
+   margin-bottom: 30px;
+}
+
+.cooking__textarea {
+   line-height: 1.5;
+   resize: both;
+   min-width: 200px;
+   max-width: 500px;
+   min-height: 225px;
+   max-height: 225px;
+   padding: 15px 20px;
+   border-radius: 6px;
+   background-color: rgba(244, 244, 244);
+   border: 1px solid transparent;
+   outline: 1px solid transparent;
+   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.cooking__textarea:hover {
+   border: 1px solid #8baa36;
+}
+
+.cooking__textarea:focus {
+   border: 1px solid #8baa36;
+   outline: 1px solid #8baa36;
+}
+
+.cooking__textarea:focus::placeholder {
+   opacity: 0;
+}
+
+.cooking__textarea::placeholder {
+   transition: opacity 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.cooking__submit-btn {
+   padding: 14px 64px;
+   border-radius: 16px 30px;
+   color: rgba(244, 244, 244);
+   background-color: #22252a;
+   border: 1px solid transparent;
+   outline: 1px solid transparent;
+   transition: all 0.3s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.cooking__submit-btn:hover {
+   background-color: #8baa36;
+}
+
+.cooking__submit-btn:focus {
+   background-color: #8baa36;
+   border: 1px solid #22252a;
+   outline: 1px solid #22252a;
 }
 
 /* ---------------- margin-bottom: 0; for last-child */
@@ -1474,6 +1546,7 @@ input[type='number']::-webkit-outer-spin-button {
 .base-data-recipe > *:last-child,
 .ingredients__list > *:last-child,
 .down-part-form > *:last-child,
-.ingredients > *:last-child {
+.ingredients > *:last-child,
+.cooking > *:last-child {
    margin-bottom: 0;
 }
