--- a/lesson-16/css/style.css
+++ b/lesson-16/css/style.css
@@ -1376,7 +1376,7 @@ input[type='number']::-webkit-outer-spin-button {
    position: relative;
    display: flex;
    align-items: center;
-   column-gap: 5px;
+   column-gap: 2px;
    min-height: 60px;
    border-radius: 6px;
    padding: 10px 15px;
@@ -1384,6 +1384,7 @@ input[type='number']::-webkit-outer-spin-button {
 }
 
 .ingredients__volume {
+   padding-right: 3px;
    max-height: 20px;
    text-align: end;
    flex: 0 0 50px;
@@ -1399,7 +1400,11 @@ input[type='number']::-webkit-outer-spin-button {
 
 .ingredients__icon {
    top: 20px;
-   right: 20px;
+   right: 25px;
+}
+
+.ingredients .ingredients__units-mass {
+   padding-left: 3px;
 }
 
 .ingredients .ingredients__name,
@@ -1425,9 +1430,10 @@ input[type='number']::-webkit-outer-spin-button {
    outline: 1px solid #8baa36;
 }
 
-.ingredients__units-mass {
-   flex: 0 0 60px;
-   background-color: rgba(244, 244, 244);
+.ingredients__volume:focus,
+.ingredients__units-mass:focus {
+   border: 1px solid #8baa36;
+   outline: 1px solid #8baa36;
 }
 
 .ingredients__units-mass:focus + .ingredients__icon {
